Inventory Rules and Unit of Measure Forms added

--- a/eSya.Admin.DO/eSya.Admin.DO/eSya.Admin.DO.csproj
+++ b/eSya.Admin.DO/eSya.Admin.DO/eSya.Admin.DO.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="DO_InventoryRules.cs" />
-    <Compile Remove="DO_UnitofMeasure.cs" />
+    <Compile Remove="DO_UnitsofMeasure.cs" />
   </ItemGroup>
 
 </Project>
